# TP

./: .travis.yml  08_geometry_rendering.cpp  CMakeLists.txt  ListaSimple.c  ListaSimple.h  TDA_TRD.c  TDA_TRD.h  archivo.txt  main.c  parser.c  parser.h
Controller/: Controller.cpp
Model/: Model.cpp
Utils/: Util_Configuracion.h
View/: View.cpp
